main.css
* {
	box-sizing: border-box;
	padding: 0;
	margin: 0;
}

body {
	background-color: #C4C4C4;
	font-family: "Averia Serif Libre", cursive;
	font-size: 16px;
}

button {
	font-family: inherit;
	display: block;
	margin: 0 auto;
}

a {
	text-decoration: none;
	color: black;
}

h1,h2 {
	text-align: center;
}

h1 {
	margin-top: 25vh;
	font-size: 8rem;
	font-weight: normal;
}

h2 {
	font-size: 1.5rem;
	margin-top: 16px;
	margin-bottom: 32px;
}


.container {
	min-height: 100vh;
	display: flex;
	/*flex-direction: column;*/
	justify-content: center;
	/*align-items: center;*/
	text-align: center;
	margin: 0 16px 0 16px;
}


.btnTalk {
	font-family: inherit;
	width: 125px;
	background-color: #7D7D7D;
	color: black;
	text-decoration: none;
	display: inline-block;
	padding: 6px 24px;
	margin-bottom: 0;
	font-size: 16px;
	font-weight: bold;
	line-height: 1.5;
	text-align: center;
	white-space: nowrap;
	vertical-align: middle;
	cursor: pointer;
	border: 2px solid black;
	border-radius: 6px;
	box-shadow: inset 0 0 0 0 white;
	transition: ease-out 0.3s;
}

.btnTalk:hover {
	box-shadow: inset 125px 0 0 0 white;
	transition: ease-out 0.3s;
}

footer {
	position: absolute;
	bottom: 0;
	width: 100%;
	text-align: center;
	font-size: 12px;
	color: #706F6F;
	margin-bottom: 8px;
}

@media screen and (min-width: 768px){
	h1 {
		margin-top: 25vh;
		font-size: 10rem;
	}

	h2 {
		font-size: 2rem;
		margin-top: 24px;
		margin-bottom: 60px;
	}
}

